# claude-deck

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-20-v0.2-history-inspector-search.md
docs/superpowers/specs/: 2026-05-20-v0.2-history-inspector-search-design.md
src/: App.css  App.tsx  chat.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude.rs  config.rs  lib.rs  main.rs  path_util.rs  pty.rs  sessions.rs
src/components/: ChatView.tsx  Composer.tsx  ConfigView.tsx  Icons.tsx  Lightbox.tsx  LocalImage.tsx  OutputPanel.tsx  SearchOverlay.tsx  Sidebar.tsx  TerminalView.tsx
src/hooks/: useChats.ts
src/lib/: bindings.ts  chatTypes.ts  claude.ts  config.ts  errorClassify.test.ts  errorClassify.ts  inspector.ts  mcpServers.test.ts  mockChat.ts  pty.ts  replay.test.ts  replay.ts  sessions.test.ts  sessions.ts
